# infera

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  docker_env.txt  extension_config.cmake  pyproject.toml  rust-toolchain.toml  vcpkg.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: MainDistributionPipeline.yml  dist_pipeline.yml  lints.yml  scheduled-1.4.yml  test-extension.yml  test_extension.yml  tests.yml
bindings/: infera_extension.cpp
bindings/include/: rust.h
docs/: CHANGES.md  CONFIGURATION.md  README.md  README2.md
docs/examples/: README.md  e1_core_functionality.sql  e1_test_core_functionality.sql  e2_advanced_features.sql  e3_integration_and_errors.sql  e4_multi_output.sql  e5_autoload_and_json.sql  e6_blob_diagnostics.sql
infera/: Cargo.toml  cbindgen.toml
infera/bindings/: infera_extension.cpp
infera/bindings/include/: infera_extension.hpp  rust.h
infera/src/: config.rs  engine.rs  error.rs  ffi_utils.rs  http.rs  lib.rs  model.rs
scripts/: upload_extension.sh
test/: README.md
test/concurrency/: test_concurrency.py
test/models/: README.md  multi_output.onnx
test/sql/: test_advanced_features.test  test_autoload_and_json.test  test_cache_management.test  test_core_functionality.test  test_decimal_features.test  test_edge_cases.test  test_edge_cases_more.test  test_get_model_info_error.slt  test_integration_and_errors.test  test_is_model_loaded.test  test_multi_output.test  test_predict_multi_list.test  test_volatile_and_null_safety.test
tests/: test_extension.py  test_extension.sh  test_extension.sql
tests/models/: README.md  linear.onnx
tests/sql/: test_advanced_features.sql  test_blob_api.sql  test_core_api.sql  test_full_api.sql  test_integration_and_errors.sql  test_linear.sql  test_new_features.sql  test_remote_model.sql
