[package]
name = "infera"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["Hassan Abedi <hassan.abedi.t+infera@gmail.com>"]
description = "A DuckDB extension for performing inference inside the database"
license = "MIT OR Apache-2.0"

[lib]
name = "infera"
crate-type = ["cdylib", "staticlib"]

[features]
duckdb_extension = []
default = ["tract"]
tract = ["dep:tract-onnx", "dep:ndarray"]

[dependencies]
once_cell = "1.19"
parking_lot = "0.12"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tract-onnx = { version = "0.21", optional = true }
ndarray = { version = "0.15", optional = true }
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[package.metadata]
# Reserved for future extension metadata
# e.g., minimum supported DuckDB version, etc.
