[package]
name = "infera"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "infera"
crate-type = ["staticlib", "cdylib"]

[features]
duckdb_extension = []
default = ["tract"]
tract = ["dep:tract-onnx", "dep:ndarray"]

[dependencies]
once_cell = "1.19"
parking_lot = "0.12"
thiserror = "2.0"
serde_json = "1.0"
tract-onnx = { version = "0.22", optional = true }
ndarray = { version = "0.16", optional = true }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
sha2 = "0.10"
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
