[package]
name = "infera"
version = "0.3.0"
edition = "2021"
publish = false

[lib]
name = "infera"
crate-type = ["staticlib", "cdylib"]

[features]
duckdb_extension = []
default = ["tract"]
tract = ["dep:tract-onnx", "dep:ndarray"]

[dependencies]
once_cell = "1.19"
parking_lot = "0.12"
thiserror = "2.0"
serde_json = "1.0"
tract-onnx = { version = "0.22", optional = true }
ndarray = { version = "0.16", optional = true }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
sha2 = "0.10"
hex = "0.4"
filetime = "0.2"

axum = "0.6"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7" # for ReaderStream
hyper = { version = "0.14", features = ["full"] }
http_cache_tags_axum="0.1.0-alpha.5"
actix-middleware-etag = "0.4.6"
actix-web = "4.12.0"
bytes = "1.11.0"

[dev-dependencies]
tempfile = "3.10"
mockito = "1.7.0"
tiny_http = "0.12.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
